<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/card_padding"
        android:background="@color/holo_light_gray"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/am_app_not_found_card"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/card_margin"
            android:layout_marginRight="@dimen/card_margin"
            android:layout_marginTop="@dimen/card_margin"
            android:padding="@dimen/card_padding"
            android:background="@drawable/card_ui_background_light">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/title_text_size"
                android:textColor="@color/holo_dark_red"
                android:fontFamily="sans-serif-light"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:text="@string/app_not_found_title"
                android:drawableLeft="@drawable/ic_info_outline"
                android:drawablePadding="8dip"
                android:layout_marginBottom="@dimen/activity_vertical_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dip"
                android:textSize="@dimen/common_text_size"
                android:textColor="@color/holo_dark_red"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/app_not_found_text_1"
                android:layout_marginBottom="@dimen/activity_vertical_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dip"
                android:textSize="@dimen/common_text_size"
                android:textColor="@color/holo_dark_red"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/app_not_found_text_2"
                android:drawableRight="@drawable/ic_arrow_forward"
                android:drawablePadding="@dimen/activity_horizontal_margin" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/am_app_card"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/card_margin"
            android:layout_marginRight="@dimen/card_margin"
            android:layout_marginTop="@dimen/card_margin"
            android:padding="@dimen/card_padding"
            android:background="@drawable/card_ui_background_light">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/common_text_size"
                android:textColor="@color/holo_dark_green"
                android:fontFamily="sans-serif-light"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:drawableLeft="@drawable/ic_info_outline"
                android:drawablePadding="8dip"
                android:text="@string/app_found_title"
                android:drawableRight="@drawable/ic_arrow_forward" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/am_app_wearable"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/card_margin"
            android:layout_marginRight="@dimen/card_margin"
            android:layout_marginTop="@dimen/card_margin"
            android:padding="@dimen/card_padding"
            android:background="@drawable/card_ui_background_light">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/common_text_size"
                android:textColor="@color/holo_dark_green"
                android:fontFamily="sans-serif-light"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:drawableLeft="@drawable/ic_info_outline"
                android:drawablePadding="8dip"
                android:text="@string/start_wearable_title"
                android:drawableRight="@drawable/ic_arrow_forward" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/am_app_instructions_card"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/card_margin"
            android:layout_marginRight="@dimen/card_margin"
            android:layout_marginTop="@dimen/card_margin"
            android:padding="@dimen/card_padding"
            android:background="@drawable/card_ui_light">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/title_text_size"
                android:textColor="@color/holo_dark_blue"
                android:fontFamily="sans-serif-light"
                android:gravity="center_vertical"
                android:text="@string/description_title"
                android:drawableLeft="@drawable/ic_info_outline"
                android:drawablePadding="8dip"
                android:layout_marginBottom="@dimen/activity_vertical_margin" />

            <TextView
                android:id="@+id/am_app_instructions_1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dip"
                android:textSize="@dimen/common_text_size"
                android:textColor="@color/holo_dark_blue"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/description_text_1"
                android:layout_marginBottom="@dimen/activity_vertical_margin" />

            <TextView
                android:id="@+id/am_app_instructions_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dip"
                android:textSize="@dimen/common_text_size"
                android:textColor="@color/holo_dark_blue"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/description_text_2"
                android:layout_marginBottom="@dimen/activity_vertical_margin" />

            <TextView
                android:id="@+id/am_app_instructions_3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dip"
                android:textSize="@dimen/common_text_size"
                android:textColor="@color/holo_dark_blue"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/description_text_3"
                android:layout_marginBottom="@dimen/activity_vertical_margin" />

            <TextView
                android:id="@+id/am_app_instructions_4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dip"
                android:textSize="@dimen/common_text_size"
                android:textColor="@color/holo_dark_blue"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/description_text_4" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>